# litellm-updater

./: .gitignore  AGENTS.md  CLAUDE.md  COMPAT_MAPPING_PROPOSAL.md  Dockerfile  FIM_CODE_COMPLETION.md  IMPLEMENTATION_PLAN_B.md  MIGRATION.md  MODEL_STATISTICS.md  README.md  SEMANTIC_REVIEW.md  SEPARATION_PLAN.md  alembic.ini  check_models.py  check_models_simple.py  config.yaml  docker-compose.yml  example.env  pyproject.toml  test_mapping.py
.github/workflows/: docker.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_tags.py  003_rename_litellm_to_openai.py  005_add_auto_detect_fim.py  006_add_auto_detect_fim_fix.py  006_add_routing_groups.py  007_add_provider_rate_limit.py
backend/: Dockerfile  __init__.py  litellm_client.py  provider_sync.py  requirements.txt  sync_worker.py
data/: config.json
datasamples/: ollama_modelinfo_sample.json
frontend/: Dockerfile  __init__.py  api.py  requirements.txt
frontend/routes/: __init__.py  admin.py  compat.py  litellm.py  models.py  providers.py  routing_groups.py
litellm_updater/: config.py  config_db.py  crud.py  database.py  db_models.py  models.py  pricing_profiles.py  sources.py  sync.py  web.py
scripts/: init_database.py  migrate_from_previous.sh  run_migrations.py  stamp_migrations.py  start_backend.sh  start_web.sh  sync_env.py
shared/: __init__.py  categorization.py  config.py  config_db.py  crud.py  database.py  db_models.py  default_compat_models.py  models.py  sources.py  tags.py
tests/: conftest.py  example.env  test_ollama_payload_cleaning.py  test_sources_integration.py
(+18 files in other folders)
