[project]
name = "litellm-updater"
version = "0.1.0"
description = "Synchronize models from Ollama or OpenAI-compatible endpoints into LiteLLM"
authors = [
  {name = "LiteLLM Updater Authors", email = "dev@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "python-multipart>=0.0.9",
  "jinja2>=3.1.3",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[project.scripts]
litellm-updater = "litellm_updater.main:run"

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["litellm_updater*"]
